<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wasted</string>
    <string name="wipe_data_checkbox">Wipe data</string>
    <string name="wipe_embedded_sim_checkbox">Wipe eSIM</string>
    <string name="panic_app_dialog_title">Confirm panic app</string>
    <string name="panic_app_dialog_message">Are you sure you want to allow %1$s to trigger destructive panic actions\\?</string>
    <string name="panic_app_unknown_app">an unknown app</string>
    <string name="allow">Allow</string>
    <string name="tile_label">Airplane mode</string>
    <string name="shortcut_label">Panic</string>
    <string name="trigger_lock_time_hint">time</string>
    <string name="trigger_lock_time_error">7d / 48h / 120m</string>
    <string name="trigger_lock_time_helper_text">How much time to wait. Modifiers: [d]ays [h]ours [m]inutes</string>
    <string name="trigger_tile_delay_description">Safe delay before it will fire. Gives you some time to cancel fire if you will tap a tile accidentally.</string>
    <string name="notification_channel_default_name">Default</string>
    <string name="foreground_service_notification_title">Guard</string>
    <string name="trigger_panic_kit">PanicKit</string>
    <string name="trigger_tile">Tile</string>
    <string name="trigger_shortcut">Shortcut</string>
    <string name="trigger_broadcast">Broadcast</string>
    <string name="trigger_notification">Notification</string>
    <string name="trigger_lock">Lock</string>
    <string name="trigger_usb">USB</string>
    <string name="trigger_application">Application</string>
    <string name="copied_popup">Copied</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="goto_button">GOTO</string>
    <string name="authentication">Authentication</string>
    <string name="edit_secret_hint">secret</string>
    <string name="edit_secret_helper_text">Use strong enough secret.</string>
    <string name="edit_secret_error">Must not be blank!</string>
    <string name="trigger_panic_kit_description">Enable panic responder. PanicKit is a collection of tools for creating “panic buttons” that can trigger a system-wide response when the user is in an anxious or dangerous situation. It enables trigger apps and responder apps to safely and easily connect to each other. The user engages with the trigger app when in a panic situation. The responder apps receive that trigger signal, and individually execute the steps that they were configured to do.</string>
    <string name="trigger_tile_description">Enable tile service. It is a button in quick settings panel when you swipe from the top of the screen. This button will mimic to the airplane mode.</string>
    <string name="trigger_shortcut_description">Enable icon shortcut. It is a button you will see when you make a long tap on the Wasted icon.</string>
    <string name="trigger_broadcast_description">Enable broadcast receiver. It is useful to communicate with another Android apps. For example you can fire Wasted from Tasker using this.</string>
    <string name="trigger_notification_description">Enable device notification listener. It will scan all notifications it has access to for the secret code. When found it will fire.</string>
    <string name="trigger_lock_description">Enable lock job scheduler. It will schedule a job every time you turn off a device screen and cancel it every time you unlock a device. When you do not unlock a device for X time a job will fire.</string>
    <string name="trigger_usb_description">Enable USB state receiver. When you make a USB data connection while a device is locked it will fire. It must not fire on charger, only on device and accessory.</string>
    <string name="trigger_application_description">Enable fake application. It will add fake messenger applications. Launching them will fire Wasted.</string>
    <string name="signal">Signal</string>
    <string name="telegram">Telegram</string>
    <string name="threema">Threema</string>
    <string name="session">Session</string>
    <string name="recast">Recast</string>
    <string name="recast_description">Instead of wipe data you may want to send a broadcast message.</string>
    <string name="enable">Enable</string>
    <string name="action">action*</string>
    <string name="receiver">receiver</string>
    <string name="extra_key">extra key</string>
    <string name="extra_value">extra value</string>
</resources>