<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_main"
        android:title="@string/main"
        android:checkable="true"
        android:checked="true" />

    <group
        android:id="@+id/nav_group_triggers"
        android:checkableBehavior="all">

        <item
            android:id="@+id/nav_trigger_tile"
            android:title="@string/trigger_tile" />

        <item
            android:id="@+id/nav_trigger_notification"
            android:title="@string/trigger_notification" />

        <item
            android:id="@+id/nav_trigger_lock"
            android:title="@string/trigger_lock" />

        <item
            android:id="@+id/nav_trigger_application"
            android:title="@string/trigger_application" />

    </group>

    <item
        android:id="@+id/nav_recast"
        android:title="@string/recast"
        android:checkable="true" />

</menu>