<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/panicKit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/trigger_panic_kit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_panic_kit_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/trigger_tile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_tile_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/shortcut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/trigger_shortcut" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_shortcut_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/broadcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/trigger_broadcast" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_broadcast_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/trigger_notification" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_notification_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/trigger_lock" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_lock_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/usb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/trigger_usb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_usb_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/application"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/trigger_application" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trigger_application_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>