<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ApplicationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/signal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/signal"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <CheckBox
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/telegram"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <CheckBox
                android:id="@+id/threema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/threema"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <CheckBox
                android:id="@+id/session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/session"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>